force-app/main/default/objects/Sampling_Standard__c/Sampling_Standard__c.object-meta.xml
<CustomObject>
    <label>Sampling Standard</label>
    <nameField>
        <displayFormat>SS-{YYYY}{MM}{0000}</displayFormat>
        <label>出样标准编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Standard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>