force-app/main/default/objects/Sampling_Standard__c/fields/Account_Sample_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Sample_Level__c</fullName>
    <formula>CASESAFEID(Channel_Name__r.Id) + &apos;-&apos; + TEXT(Level__c)</formula>
    <label>*客户出样等级</label>
    <type>Text</type>
</CustomField>