force-app/main/default/objects/Sampling_Standard__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sampling_Standard_Account</relationshipName>
    <type>Lookup</type>
</CustomField>