force-app/main/default/objects/Sampling_Standard__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>定番等级为廃番</label>
    <type>Checkbox</type>
</CustomField>