force-app/main/default/objects/Sampling_Standard__c/fields/Is_Add_ByReport__c.field-meta.xml
<CustomField>
    <fullName>Is_Add_ByReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>巡店日报新建的出样标准</label>
    <type>Checkbox</type>
</CustomField>