force-app/main/default/objects/Sampling_Standard__c/fields/Is_Added__c.field-meta.xml
<CustomField>
    <fullName>Is_Added__c</fullName>
    <label>是否上架</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
                <default>true</default>
                <label>是</label>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>