force-app/main/default/objects/Sampling_Standard__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>出样等级</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level</valueSetName>
    </valueSet>
</CustomField>