force-app/main/default/objects/Sampling_Standard__c/fields/NumberOfStores__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStores__c</fullName>
    <label>渠道给出店铺数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>