force-app/main/default/objects/Sampling_Standard__c/fields/Product_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Id_Text__c</fullName>
    <label>产品型号Id(后台使用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>