force-app/main/default/objects/Sampling_Standard__c/fields/Sampling_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出样等级映射表</label>
    <referenceTo>Sampling_Mapping__c</referenceTo>
    <relationshipName>Sampling_Standard_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>