force-app/main/default/objects/Sampling_Standard__c/fields/Share_Account__c.field-meta.xml
<CustomField>
    <fullName>Share_Account__c</fullName>
    <formula>Channel_Name__r.Customer_SF_Code__c</formula>
    <label>*共享客户</label>
    <type>Text</type>
</CustomField>