force-app/main/default/objects/Sampling_Standard__c/validationRules/CannotEditLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEditLevel</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( ISCHANGED( Is_Added__c ),TEXT(Is_Added__c)=&apos;否&apos;, ISCHANGED(Level__c)),AND(ISCHANGED(Level__c),TEXT(Is_Added__c)=&apos;否&apos;))</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>下架产品时不可修改出样等级</errorMessage>
</ValidationRule>