force-app/main/default/objects/Sampling_Standard__c/validationRules/CannotEditProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEditProduct</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISNEW()),OR(ISCHANGED(Product__c),ISCHANGED( Channel_Name__c )))</errorConditionFormula>
    <errorMessage>不可编辑产品或客户</errorMessage>
</ValidationRule>