force-app/main/default/objects/Sampling_Standard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Name__c</columns>
    <columns>Level__c</columns>
    <columns>NumberOfStores__c</columns>
    <columns>Is_Added__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>